0.54 - fixed bugs that caused problems when unopened result sets were closed

0.53.1 - updated the configuration and tuning docs a bit
	fixed a Makefile bug that caused "make clean" to be interrupted
	extern "C"-wrapped sys/times.h for OSR500

0.53 - added support for sqlite statement api and native binds
	fixed some leaks related to using sys::getHostName()
	added multiarch detection
	added PHP PDO driver
	fixed a bind variable translation bug where output binds followed by
		:= would not be detected
	dropped zope support (for now)
	dropped PHP Pear DB support
	refactored init script - one script should work on all platforms now
	updated init script installation - should work on virtually all unixes
	added OS X launchd configuration
	updated the sqlr-listener to clean up files related to ipc, sockets
		and marking whether the db is up or down on exit
	sqlr-start no longer starts the cache manager
	added a second init script for the cache manager
	plugins are statically linked into libsqlrserver if the platform
		doesn't support shared libraries (or if --disable-shared is
		specified at configure time)
	the perl API should build with old versions of perl (5.00X) on older
		platforms (redhat 4.2, 5.2, 6.2, etc.) now
	updated postgresql bind docs
	added dateyyyyddmm parameter
	added yyyyddmm parameter to translatedates translation
	added SQLR_MYSQL_DATE_YYYYDDMM envrionment variable to mysql drop-in
		library
	added SQLR_ODBC_DATE_YYYYDDMM envrionment variable to odbc driver

0.52 - sqlrsh has long reported the wrong version, fixed that
	added csv support to sqlr-export and a -format xml|csv option
	replaced snprintf calls with charstring::printf calls
	added a test for sys/vnode.h to work around an issue with perl on
		SCO OSR6
	added workarounds for old versions of sqlite without sqlite3_malloc
		and sqlite3_free with char * argument
	fixed error with sqlserver where "describe <table>" would return
		columns in alphabetical order rather than the order they