@@ -357,9 +357,6 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance addresses&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;0.0.0.0&quot;</font><font color="#008b8b">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance port&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;9000&quot;</font><font color="#008b8b">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance socket&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;/tmp/sqlrelay.socket&quot;</font><font color="#008b8b">&gt;</font><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance mysqladdresses&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;0.0.0.0&quot;</font><font color="#008b8b">&gt;</font><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance mysqlport&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;9001&quot;</font><font color="#008b8b">&gt;</font><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance mysqlsocket&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;/tmp/mysqlsqlrelay.socket&quot;</font><font color="#008b8b">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance dbase&nbsp;<font color="#2e8b57"><b>(</b></font><font color="#ff00ff">oracle8</font><font color="#008b8b">|</font><font color="#ff00ff">mysql</font><font color="#008b8b">|</font><font color="#ff00ff">postgresql</font><font color="#008b8b">|</font><font color="#ff00ff">sqlite</font><font color="#008b8b">|</font><font color="#ff00ff">freetds</font><font color="#008b8b">|</font><font color="#ff00ff">sybase</font><font color="#008b8b">|</font><font color="#ff00ff">odbc</font><font color="#008b8b">|</font><font color="#ff00ff">db2</font><font color="#008b8b">|</font><font color="#ff00ff">firebird</font><font color="#008b8b">|</font><font color="#ff00ff">mdbtools</font><font color="#008b8b">|</font><font color="#ff00ff">router</font><font color="#2e8b57"><b>)</b></font>&nbsp;<font color="#ff00ff">&quot;oracle8&quot;</font><font color="#008b8b">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance connections&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;1&quot;</font><font color="#008b8b">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance maxconnections&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;1&quot;</font><font color="#008b8b">&gt;</font><br>
