@@ -18,13 +18,6 @@ sqlrconfigfile::sqlrconfigfile() : xmlsax() {
 	unixport=charstring::duplicate("");
 	listenoninet=false;
 	listenonunix=false;
-	mysqladdresses=new char *[1];
-	mysqladdresses[0]=charstring::duplicate("0.0.0.0");
-	mysqladdresscount=1;
-	mysqlport=0;
-	mysqlunixport=charstring::duplicate("");
-	mysqllistenoninet=false;
-	mysqllistenonunix=false;
 	dbase=charstring::duplicate(DEFAULT_DBASE);
 	connections=charstring::toInteger(DEFAULT_CONNECTIONS);
 	maxconnections=0;
@@ -97,13 +90,6 @@ sqlrconfigfile::~sqlrconfigfile() {
 	}
 	delete[] addresses;
 
-
-	for (uint64_t myadrind=0; myadrind<mysqladdresscount; myadrind++) {
-		delete[] mysqladdresses[myadrind];
-	}
-	delete[] mysqladdresses;
-	delete[] mysqlunixport;
-
 	delete[] dbase;
 	delete[] unixport;
 	delete[] endofsession;
@@ -165,30 +151,6 @@ bool sqlrconfigfile::getListenOnInet() {
 
 bool sqlrconfigfile::getListenOnUnix() {
 	return listenonunix;
-}
-
-const char * const * sqlrconfigfile::getMySQLAddresses() {
-	return mysqladdresses;
-}
-
-uint64_t sqlrconfigfile::getMySQLAddressCount() {
-	return mysqladdresscount;
-}
-
-uint16_t sqlrconfigfile::getMySQLPort() {
-	return mysqlport;
-}
-
-const char *sqlrconfigfile::getMySQLUnixPort() {
-	return mysqlunixport;
-}
-
-bool sqlrconfigfile::getMySQLListenOnInet() {
-	return mysqllistenoninet;
-}
-
-bool sqlrconfigfile::getMySQLListenOnUnix() {
-	return mysqllistenonunix;
 }
 
 const char *sqlrconfigfile::getDbase() {
@@ -732,9 +694,6 @@ bool sqlrconfigfile::tagEnd(const char *name) {
 
 		listenoninet=(port)?true:false;
 		listenonunix=(unixport[0])?true:false;
-
-		mysqllistenoninet=(mysqlport)?true:false;
-		mysqllistenonunix=(mysqlunixport[0])?true:false;
 	}
 
 	// don't do anything if we're already done
@@ -880,12 +839,6 @@ bool sqlrconfigfile::attributeName(const char *name) {
 		} else if (!charstring::compare(name,"socket") ||
 				!charstring::compare(name,"unixport")) {
 				currentattribute=SOCKET_ATTRIBUTE;
-		} else if (!charstring::compare(name,"mysqladdresses")) {
-			currentattribute=MYSQLADDRESSES_ATTRIBUTE;
-		} else if (!charstring::compare(name,"mysqlport")) {
-				currentattribute=MYSQLPORT_ATTRIBUTE;
-		} else if (!charstring::compare(name,"mysqlsocket")) {
-				currentattribute=MYSQLSOCKET_ATTRIBUTE;
 		} else if (!charstring::compare(name,"dbase")) {
 			currentattribute=DBASE_ATTRIBUTE;
 		} else if (!charstring::compare(name,"connections")) {
@@ -1200,29 +1153,6 @@ bool sqlrconfigfile::attributeValue(const char *value) {
 		} else if (currentattribute==SOCKET_ATTRIBUTE) {
 			delete[] unixport;
 			unixport=charstring::duplicate(value);
-		} else if (currentattribute==MYSQLADDRESSES_ATTRIBUTE) {
-			uint64_t index;
-			for (index=0; index<mysqladdresscount; index++) {
-				delete[] mysqladdresses[index];
-			}
-			delete[] mysqladdresses;
-			// if the attribute was left blank, assume 0.0.0.0
-			if (!charstring::length(value)) {
-				value="0.0.0.0";
-			}
-			charstring::split(
-				(value &&
-				!charstring::contains(value,DEFAULT_ADDRESSES))?
-				value:DEFAULT_ADDRESSES,
-				",",true,&mysqladdresses,&mysqladdresscount);
-			for (index=0; index<mysqladdresscount; index++) {
-				charstring::bothTrim(mysqladdresses[index]);
-			}
-		} else if (currentattribute==MYSQLPORT_ATTRIBUTE) {
-			mysqlport=atouint32_t(value,"0",0);
-		} else if (currentattribute==MYSQLSOCKET_ATTRIBUTE) {
-			delete[] mysqlunixport;
-			mysqlunixport=charstring::duplicate(value);
 		} else if (currentattribute==DBASE_ATTRIBUTE) {
 			delete[] dbase;
 			dbase=charstring::duplicate((value)?value:
