@@ -22,9 +22,6 @@ typedef enum {
 	ADDRESSES_ATTRIBUTE,
 	PORT_ATTRIBUTE,
 	SOCKET_ATTRIBUTE,
-	MYSQLADDRESSES_ATTRIBUTE,
-	MYSQLPORT_ATTRIBUTE,
-	MYSQLSOCKET_ATTRIBUTE,
 	DBASE_ATTRIBUTE,
 	CONNECTIONS_ATTRIBUTE,
 	MAXCONNECTIONS_ATTRIBUTE,
@@ -181,12 +178,6 @@ class SQLRUTIL_DLLSPEC sqlrconfigfile : public xmlsax {
 		const char	*getUnixPort();
 		bool		getListenOnInet();
 		bool		getListenOnUnix();
-		const char * const *getMySQLAddresses();
-		uint64_t	getMySQLAddressCount();
-		uint16_t	getMySQLPort();
-		const char	*getMySQLUnixPort();
-		bool		getMySQLListenOnInet();
-		bool		getMySQLListenOnUnix();
 		const char	*getDbase();
 		uint32_t	getConnections();
 		uint32_t	getMaxConnections();
@@ -284,12 +275,6 @@ class SQLRUTIL_DLLSPEC sqlrconfigfile : public xmlsax {
 		char		*unixport;
 		bool		listenoninet;
 		bool		listenonunix;
-		char		**mysqladdresses;
-		uint64_t	mysqladdresscount;
-		uint16_t	mysqlport;
-		char		*mysqlunixport;
-		bool		mysqllistenoninet;
-		bool		mysqllistenonunix;
 		char		*dbase;
 		uint32_t	connections;
 		uint32_t	maxconnections;
